--- a/dev-index001.html
+++ b/dev-index001.html
@@ -6,7 +6,7 @@
 <article class="card">
   <div class="modest-vid-embed modest-vid-embed--auto">
     <div class="modest-vid-embed__wrapper">
-      <iframe class="modest-vid-embed__item" src="https://www.youtube.com/embed/Ya7p1opKVGM?mute=1&autoplay=1&modestbranding=1&loop=1&rel=0&amp;controls=0&amp;showinfo=0&t=22s" frameborder="0" allowfullscreen></iframe>
+      <iframe class="modest-vid-embed__item" src="https://www.youtube.com/embed/Ya7p1opKVGM?&t=22s&mute=0&autoplay=1&modestbranding=1&loop=1&rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 </article --!>
