--- a/dev-index001.html
+++ b/dev-index001.html
@@ -12,11 +12,11 @@ min-width: 100%;
 min-height: 100%;
 width: auto;
 height: auto;
-z-index: -100;
+
 background-size: cover;
 }
 
-/*****************************/
+/**************may need z-index: -100; in block above - removed to test***************/
 
 .overlay {
   width: 400px;
@@ -82,6 +82,8 @@ background-size: cover;
     
     <iframe width="auto" src="https://www.youtube.com/embed/Ya7p1opKVGM?&t=22s&mute=0&autoplay=1&modestbranding=1&loop=1&rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
   
+	  
+	  
 	  
 	  <!--- <div class="overlay">
     <h1>Youtube Video Autoplay</h1>
