--- a/dev-index001.html
+++ b/dev-index001.html
@@ -80,7 +80,7 @@ background-size: cover;
   <body>
     
     
-    <iframe width="auto" src="https://www.youtube.com/embed/Ya7p1opKVGM?&t=22s&mute=0&autoplay=1&modestbranding=1&loop=1&rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+    <iframe width="auto" src="https://www.youtube.com/embed/Ya7p1opKVGM?&mute=0&autoplay=1&modestbranding=1&loop=1&rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
   
 	  
 	  
