--- a/dev-index001.html
+++ b/dev-index001.html
@@ -12,11 +12,11 @@ min-width: 100%;
 min-height: 100%;
 width: auto;
 height: auto;
-
+z-index: -100;
 background-size: cover;
 }
 
-/**************may need z-index: -100; in block above - removed to test***************/
+/*****************************/
 
 .overlay {
   width: 400px;
