--- a/dev-index002.html
+++ b/dev-index002.html
@@ -3,7 +3,7 @@
   <style>
 body {
   
-background:  url(http://upload.wikimedia.org/wikipedia/commons/d/dd/Muybridge_race_horse_animated.gif) no-repeat center center fixed; 
+background:  url(https://i.makeagif.com/media/4-22-2017/XJeveQ.gif) no-repeat center center fixed; 
   background-size: cover;
 }
 </style>
