--- a/dev-index003.html
+++ b/dev-index003.html
@@ -17,7 +17,7 @@ background:  url(https://i.makeagif.com/media/4-22-2017/XJeveQ.gif) no-repeat ce
   
 
   
-  <iframe width="auto" scrolling="no" frameborder="no" allow="autoplay" style="display:none;opacity:0%;" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/553272582&color=%23ff5500&auto_play=true&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false"></iframe>
+  <iframe width="auto" scrolling="no" frameborder="no" allow="autoplay" style="opacity:0%;" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/553272582&color=%23ff5500&auto_play=true&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false"></iframe>
   
  
     
