--- a/dev-index004.html
+++ b/dev-index004.html
@@ -8,28 +8,14 @@
 background:  url(https://i.makeagif.com/media/4-22-2017/XJeveQ.gif) no-repeat center center fixed; 
   background-size: cover;
 }
-</style>
-  <script>
-window.onload = function() {
-  var context = new AudioContext();
-}
-</script>
+
 </head>
   
   <body>
 
+ <iframe width="100%" scrolling="no" frameborder="no" allow="autoplay" style="opacity:20%;" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/553272582&color=%23ff5500&auto_play=true&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false"></iframe>
 
 
-<div>
-   <audio autoplay ><src="https://dl.gensoundcloud.com/cf-media.sndcdn.com/GwA5Ho2ZLGOf.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vR3dBNUhvMlpMR09mLjEyOC5tcDMqIiwiQ29uZGl0aW9uIjp7IkRhdGVMZXNzVGhhbiI6eyJBV1M6RXBvY2hUaW1lIjoxNjM5ODk0MDk5fX19XX0_&Signature=TktC3H8vG-v2CUOOXzc2iG0ukyVPvxeuh7YkOFDKt-pxCTUYuXWOWYVI9CtZ2RU4pJKWYnHoKzkIIw4~Q6xGV-~kLfJJpjFY2abs4ktqBYsQgU~8iyFiC0BExezIN5CH3Ghim4ahPVZ-Lk~33ymTLzCWBxhB1iQy8hKlgQqmgiH1P3EdlKtpgvHJE6kcB27~XpOpiENueuLcdrGpulz4w3daRsm3ap-3HLAGnGh0p1RBHaXlPDgIFI18cub9vmldrqPmPv7x05rWo2UofoyNRURPnfDH3qsj6OdAYOeR9mn-T7C8X8ZKt7GUxR6pryKk2qMMajDrd-5Fqv0OOlDhUw__&Key-Pair-Id=APKAI6TU7MMXM5DG6EPQ&fgensc=Through-Ancient-Eyes-Mixtape-Tribal-Trap-Global-Bass-Psy-Bass-Eastern-Dubstep-553272582.mp3" autostart=true loop=true width="1px" height="1px">
-   </audio>
-</div>
-    
-<script>
-
-document.addEventListener('click', function() { document.getElementById('ID').play() }, { once: true });
-
-</script>
 
   </body>
   
